--- a/README.org
+++ b/README.org
@@ -13,7 +13,7 @@ described here!
    static main(String[]) // The entry point of our program.
   
   Race
-   registerRacer(Vehicle) // register Car/Truck/Motrcycle into the race. Typical aggregation class function to let external code inject objects
+   registerRacer(Vehicle) // register Car/Truck/Motrcycle into the race. Race objects has to store all the racers, also let us register them from outside
    simulateRace() // simulates the race by
                   // - calling moveForAnHour() on every vehicle 50 times
                   // - setting whether its raining
